fixed overflow on index page

--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,7 @@ nav ul li a:hover {
     font-size: 1.1rem;
     line-height: 1.25rem;
     color: var(--text);
+    overflow-y: hidden;
 }
 
 /* Services */
